--- a/cloud-browser.yaml
+++ b/cloud-browser.yaml
@@ -1,6 +1,6 @@
 #cloud-config
-# version: 3.5
-# Droplet Init Config v3.5 - 2026-02-02
+# version: 3.5.1
+# Droplet Init Config v3.5.1 - 2026-02-02
 #
 # === PLACEHOLDER REFERENCE ===
 # Plaintext (validated in Shortcut - alphanumeric + underscore only):
@@ -18,6 +18,7 @@
 #   BOOT_INSTRUCTIONS_B64
 #
 # === CHANGELOG ===
+# v3.5.1: x11vnc full-screen polling, persistent background color (-noxrecord -noxfixes -fs 1.0) for reliable Xvfb display
 # v3.5: x11vnc RDP quality fixes (-noxdamage -fixscreen -noscr), disable compositor,
 #       keep --no-install-recommends except desktop, skip reboot, xrdp race fix
 # v3.4-exp: Timing instrumentation, test --no-install-recommends, skip reboot
@@ -178,7 +179,7 @@ write_files:
      User=[[USERNAME]]
      Environment=DISPLAY=:10
      ExecStartPre=/bin/sleep 3
-     ExecStart=/usr/bin/x11vnc -display :10 -rfbport 5900 -forever -nopw -shared -localhost -noxdamage -fixscreen V=2 -noscr
+     ExecStart=/usr/bin/x11vnc -display :10 -rfbport 5900 -forever -nopw -shared -localhost -noxdamage -noxrecord -noxfixes -fs 1.0 -defer 10 -wait 5
      Restart=on-failure
      RestartSec=5
      [Install]
@@ -434,7 +435,7 @@ write_files:
        xfconf-query -c xfce4-desktop -p "$ws/image-style" -n -t int -s 0 2>/dev/null
        xfconf-query -c xfce4-desktop -p "$ws/rgba1" -n -t double -t double -t double -t double -s $R -s $G -s $B -s 1.0 2>/dev/null
      done
-     rm -f "$HOME/.config/autostart/set-background.desktop"
+     
 
  - path: /usr/local/bin/restore-clawdbot-state.sh
    permissions: "0755"
