--- a/cloud-browser.yaml
+++ b/cloud-browser.yaml
@@ -1,7 +1,8 @@
 #cloud-config
-# version: 3.8
-# Droplet Init Config v3.8 - 2026-02-02
+# version: 3.9
+# Droplet Init Config v3.9 - 2026-02-03
 # Multi-agent council support, habitat-based memory, hot-reload council group
+# GPT-5.2 with reasoning_effort:high, Gemini 3 Pro Preview
 #
 # === PLACEHOLDER REFERENCE ===
 # Plaintext: USERNAME, BG_R, BG_G, BG_B
@@ -565,7 +566,7 @@ write_files:
    content: |
      #!/bin/bash
      LOG="/var/log/package-install.log"; T="/usr/local/bin/tlog.sh"
-     echo "=== v3.8 Package Install: $(date) ===" > "$LOG"
+     echo "=== v3.9 Package Install: $(date) ===" > "$LOG"
      $T start total_install
      $T start dl_chrome
      wget -q -O /tmp/chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb &
@@ -656,7 +657,7 @@ write_files:
      A4N=$(d "$AGENT4_NAME_B64"); A4N="${A4N:-Opus}"; A4T=$(d "$AGENT4_BOT_TOKEN_B64")
      CGI=$(d "$COUNCIL_GROUP_ID_B64"); HN=$(d "$HABITAT_NAME_B64"); HN="${HN:-default}"
      H="/home/$USERNAME"; LOG="/var/log/clawdbot-setup.log"
-     echo "=== v3.8 Clawdbot Setup: $(date) ===" > "$LOG"
+     echo "=== v3.9 Clawdbot Setup: $(date) ===" > "$LOG"
      $T start total_clawdbot
      AC=1; [ -n "$A2T" ] && AC=$((AC+1)); [ -n "$A3T" ] && AC=$((AC+1)); [ -n "$A4T" ] && AC=$((AC+1))
      CE="false"; [ -n "$CGI" ] && CE="true"
@@ -724,11 +725,11 @@ write_files:
      [ -n "$A4T" ] && TA="$TA,\"agent4\":{\"botToken\":\"${A4T}\"}"
      TG=""; [ -n "$CGI" ] && TG=",\"groups\":{\"${CGI}\":{\"requireMention\":true},\"*\":{\"requireMention\":true}}"
      cat > $H/.clawdbot/clawdbot.json <<CFG
-     {"env":{"ANTHROPIC_API_KEY":"${AK}",${OJ}${GAJ}${BJ}"DISPLAY":":10"},"browser":{"enabled":true,"executablePath":"/usr/bin/google-chrome-stable","headless":false,"noSandbox":true},"agents":{"defaults":{"model":{"primary":"anthropic/claude-opus-4-5"},"maxConcurrent":4,"subagents":{"maxConcurrent":8},"workspace":"$H/clawd"},"list":${AL}},"bindings":${BD},"gateway":{"mode":"local","port":18789,"bind":"lan","controlUi":{"enabled":true,"allowInsecureAuth":true},"auth":{"mode":"token","token":"${GT}"}},"auth":{"profiles":{${AP}}},"plugins":{"entries":{"telegram":{"enabled":true}}},"channels":{"telegram":{"enabled":true,"dmPolicy":"allowlist","allowFrom":["${TUI}"],"accounts":{${TA}}${TG}}},"skills":{"install":{"nodeManager":"npm"}},"hooks":{"internal":{"enabled":true,"entries":{"boot-md":{"enabled":true}}}}}
+     {"env":{"ANTHROPIC_API_KEY":"${AK}",${OJ}${GAJ}${BJ}"DISPLAY":":10"},"browser":{"enabled":true,"executablePath":"/usr/bin/google-chrome-stable","headless":false,"noSandbox":true},"agents":{"defaults":{"model":{"primary":"anthropic/claude-opus-4-5"},"maxConcurrent":4,"subagents":{"maxConcurrent":8},"workspace":"$H/clawd","models":{"openai/gpt-5.2":{"params":{"reasoning_effort":"high"}}}},"list":${AL}},"bindings":${BD},"gateway":{"mode":"local","port":18789,"bind":"lan","controlUi":{"enabled":true,"allowInsecureAuth":true},"auth":{"mode":"token","token":"${GT}"}},"auth":{"profiles":{${AP}}},"plugins":{"entries":{"telegram":{"enabled":true}}},"channels":{"telegram":{"enabled":true,"dmPolicy":"allowlist","allowFrom":["${TUI}"],"accounts":{${TA}}${TG}}},"skills":{"install":{"nodeManager":"npm"}},"hooks":{"internal":{"enabled":true,"entries":{"boot-md":{"enabled":true}}}}}
      CFG
      echo -e "# Agent: ${A1N}\nModel: Claude Opus 4.5\nBe helpful and natural." > $H/clawd/agents/agent1/AGENTS.md
-     [ -n "$A2T" ] && echo -e "# Agent: ${A2N}\nModel: GPT-4.5\nBe helpful and natural." > $H/clawd/agents/agent2/AGENTS.md
-     [ -n "$A3T" ] && echo -e "# Agent: ${A3N}\nModel: Gemini 2.5 Pro\nBe helpful and natural." > $H/clawd/agents/agent3/AGENTS.md
+     [ -n "$A2T" ] && echo -e "# Agent: ${A2N}\nModel: GPT-5.2 (reasoning_effort: high)\nBe helpful and natural." > $H/clawd/agents/agent2/AGENTS.md
+     [ -n "$A3T" ] && echo -e "# Agent: ${A3N}\nModel: Gemini 3 Pro Preview\nBe helpful and natural." > $H/clawd/agents/agent3/AGENTS.md
      [ -n "$A4T" ] && echo -e "# Agent: ${A4N}\nModel: Claude Opus 4.5 + Extended Thinking\nBe helpful and natural." > $H/clawd/agents/agent4/AGENTS.md
      cat > $H/clawd/shared/KNOWLEDGE.md <<KMD
      # Shared Knowledge
